# aix

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
aix-chess-compression/: Cargo.toml  README.md
aix-chess-compression/benches/: benches.rs
aix-chess-compression/src/: compactindex.rs  huffman.rs  lib.rs  naive.rs
aixrs/: Cargo.toml
aixrs/src/: game.rs  lib.rs  scoutfish.rs  subfen.rs
docs/: README.md  columns.md  encoding.md  functions.md
pgn-to-aix/: Cargo.toml  README.md
pgn-to-aix/src/: args.rs  main.rs  pgn.rs
pgn-to-aix/src/sql/: init-database.sql  init-other-database.sql
src/: aixchess_extension.cpp
src/functions/: board_at_position.cpp  clocks_to_move_times.cpp  eval_conversions.cpp  fen_at_position.cpp  matches_subfen.cpp  move_details.cpp  moved_pieces.cpp  piece_counts_at_position.cpp  pieces_at_position.cpp  recompress.cpp  scoutfish_query.cpp  time_control_lichess.cpp  to_pgn.cpp  to_uci.cpp  winning_chances_lichess.cpp
src/include/: aixchess_extension.hpp  aixchess_functions.hpp  bits.h
src/include/rust/: Bitboards.d.hpp  Bitboards.hpp  DecodeError.d.hpp  DecodeError.hpp  Game.d.hpp  Game.hpp  MoveDetails.d.hpp  MoveDetails.hpp  MoveDetailsIterator.d.hpp  MoveDetailsIterator.hpp  ScoutfishQuery.d.hpp  ScoutfishQuery.hpp  ScoutfishQueryParseError.d.hpp  ScoutfishQueryParseError.hpp  Subfen.d.hpp  Subfen.hpp
test/sql/: board_at_position.test  clocks_to_move_times.test  eval_conversions.test  fen_at_position.test  matches_subfen.test  move_details.test  moved_pieces.test  piece_counts_at_position.test  pieces_at_position.test  recompress.test  scoutfish_query.test  time_control_lichess.test  to_pgn.test  to_uci.test  winning_chances_lichess.test
